# mcp_jina

./: .env.example  .gitignore  README.md  pyproject.toml
src/jina/: server.py
